fix: feature height alignment (WIP)

--- a/src/sass/critical.scss
+++ b/src/sass/critical.scss
@@ -23,7 +23,11 @@ nav {
 
 .back_feature {
   padding-top: 2rem;
+  display: flex;
+  flex-direction: column;
+
   p.feature {
+    flex-grow: 1;
     text-align: left;
   }
   p > a {
